# codecrafters-interpreter

./: CMakeLists.txt  README.md
inc/analysis/: tree_analysis.h
inc/analysis/contexts/: identifier_finder_context.h  identifier_resolution_context.h
inc/analysis/visitors/: generic_visitor.h  identifier_finder_visitor.h  identifier_resolution_visitor.h
inc/ast/: node.h
inc/ast/expression/: addition.h  and.h  assignment.h  boolean.h  division.h  dot_operator.h  equality.h  expr.h  function_call.h  greater_or_equal_to.h  greater_than.h  grouping.h  identifier.h  inequality.h  less_or_equal_to.h  less_than.h  logical_not.h  lox_string.h  multiplication.h  nil.h  number.h  or.h  subtraction.h  unary_minus.h
inc/ast/expression/fwd/: addition.h  and.h  assignment.h  boolean.h  division.h  dot_operator.h  equality.h  expr.h  function_call.h  greater_or_equal_to.h  greater_than.h  grouping.h  identifier.h  inequality.h  less_or_equal_to.h  less_than.h  logical_not.h  lox_string.h  multiplication.h  nil.h  number.h  or.h  subtraction.h  unary_minus.h
inc/ast/statement/: block.h  class_declaration.h  empty_statement.h  expression_statement.h  for.h  function_declaration.h  if_statement.h  print_statement.h  program.h  return.h  statement.h  variable_declaration.h  while.h
inc/ast/statement/fwd/: block.h  class_declaration.h  empty_statement.h  expression_statement.h  for.h  function_declaration.h  if_statement.h  print_statement.h  program.h  return.h  statement.h  variable_declaration.h  while.h
inc/interpreter/: class_blueprint.h  class_instance.h  context.h  environment.h  evaluation_interface.h  interpreter_error.h  lox_function.h  lox_value.h
inc/interpreter/fwd/: class_blueprint.h  class_instance.h  interpreter_error.h  lox_function.h  lox_value.h
inc/lexer/: lexer.h  token.h
inc/parser/: binding_power.h  parse_function.h  parser.h
inc/parser/parse_functions/: access_parse.h  arithmetic_parse.h  assignment_parse.h  function_parse.h  literal_parse.h  relational_parse.h  statement_parse.h  unary_parse.h
inc/util/: ast_printer.h  variant_utils.h
src/: main.cpp
src/analysis/: tree_analysis.cpp
src/analysis/visitors/: identifier_finder_visitor.cpp  identifier_resolution_visitor.cpp
src/interpreter/: context.cpp  environment.cpp  interpreter.cpp
src/interpreter/leaves/: leaves.cpp
src/interpreter/operations/: access.cpp  binary.cpp  function.cpp  misc.cpp  statements.cpp  unary.cpp
src/lexer/: lexer.cpp  token.cpp
src/parser/: parser.cpp
src/parser/parse_functions/: access_parse.cpp  arithmetic_parse.cpp  assignment_parse.cpp  function_parse.cpp  literal_parse.cpp  relational_parse.cpp  statement_parse.cpp  unary_parse.cpp
