cmake_minimum_required(VERSION 3.13)

project(codecrafters-interpreter)

set(CMAKE_CXX_STANDARD 23) # Enable the C++23 standard

file(GLOB_RECURSE SOURCE_FILES src/*.cpp src/*.hpp)

add_executable(interpreter ${SOURCE_FILES}
        src/lexer/lexer.cpp
        src/parser/parser.cpp
        src/lexer/token.cpp
        inc/ast/expression/expr.h
        inc/lexer/lexer.h
        inc/lexer/token.h
        inc/parser/parser.h
        inc/util/ast_printer.h
        inc/parser/parse_function.h
        inc/ast/node.h
        inc/ast/expression/addition.h
        inc/ast/expression/multiplication.h
        inc/ast/expression/subtraction.h
        inc/ast/expression/division.h
        inc/ast/statement/block.h
        inc/ast/statement/print_statement.h
        inc/ast/statement/statement.h
        inc/util/variant_utils.h
        inc/ast/expression/grouping.h
        inc/ast/expression/fwd/grouping.h
        inc/ast/expression/number.h
        inc/ast/expression/fwd/number.h
        inc/ast/expression/nil.h
        inc/ast/expression/fwd/nil.h
        inc/ast/expression/fwd/lox_string.h
        inc/ast/expression/lox_string.h
        inc/ast/expression/fwd/boolean.h
        inc/ast/expression/boolean.h
        inc/ast/expression/fwd/unary_minus.h
        inc/ast/expression/unary_minus.h
        inc/ast/expression/fwd/logical_not.h
        inc/ast/expression/logical_not.h
        src/interpreter/interpreter.cpp
        inc/interpreter/lox_value.h
        inc/interpreter/evaluation_interface.h
        src/interpreter/leaves/leaves.cpp
        src/interpreter/operations/binary.cpp
        src/interpreter/operations/misc.cpp
        src/interpreter/operations/unary.cpp
        inc/ast/expression/fwd/inequality.h
        inc/ast/expression/fwd/equality.h
        inc/ast/expression/equality.h
        inc/ast/expression/inequality.h
        inc/ast/expression/fwd/greater_or_equal_to.h
        inc/ast/expression/fwd/less_or_equal_to.h
        inc/ast/expression/greater_or_equal_to.h
        inc/ast/expression/less_or_equal_to.h
        inc/ast/expression/fwd/greater_than.h
        inc/ast/expression/fwd/less_than.h
        inc/ast/expression/greater_than.h
        inc/ast/expression/less_than.h
        inc/ast/statement/fwd/statement.h
        inc/ast/statement/fwd/block.h
        inc/ast/statement/fwd/print_statement.h
        inc/ast/statement/expression_statement.h
        inc/ast/statement/fwd/expression_statement.h
        src/interpreter/operations/statements.cpp
        inc/ast/statement/fwd/program.h
        inc/ast/statement/program.h
        src/interpreter/environment.cpp
        inc/interpreter/environment.h
        inc/ast/expression/fwd/identifier.h
        inc/ast/expression/identifier.h
        inc/ast/statement/fwd/variable_declaration.h
        inc/ast/statement/variable_declaration.h
        inc/ast/expression/assignment.h
        inc/ast/expression/fwd/assignment.h
        inc/parser/parse_functions/literal_parse.h
        src/parser/parse_functions/literal_parse.cpp
        inc/parser/parse_functions/unary_parse.h
        src/parser/parse_functions/unary_parse.cpp
        src/parser/parse_functions/arithmetic_parse.cpp
        inc/parser/parse_functions/arithmetic_parse.h
        inc/parser/binding_power.h
        inc/parser/parse_functions/relational_parse.h
        src/parser/parse_functions/relational_parse.cpp
        inc/parser/parse_functions/assignment_parse.h
        src/parser/parse_functions/assignment_parse.cpp
        inc/parser/parse_functions/statement_parse.h
        src/parser/parse_functions/statement_parse.cpp
        inc/ast/statement/fwd/if_statement.h
        inc/ast/statement/if_statement.h
        inc/ast/expression/or.h
        inc/ast/expression/fwd/or.h
        inc/ast/expression/fwd/and.h
        inc/ast/expression/and.h
        inc/ast/statement/while.h
        inc/ast/statement/fwd/while.h
        inc/ast/statement/fwd/for.h
        inc/ast/statement/for.h
        inc/ast/statement/empty_statement.h
        inc/ast/statement/fwd/empty_statement.h
        inc/parser/parse_functions/function_parse.h
        inc/ast/expression/function_call.h
        inc/ast/expression/fwd/function_call.h
        src/parser/parse_functions/function_parse.cpp
        inc/interpreter/lox_function.h
        src/interpreter/operations/function.cpp
        inc/ast/statement/function_declaration.h
        inc/ast/statement/fwd/function_declaration.h
        inc/ast/statement/return.h
        inc/ast/statement/fwd/return.h
        inc/interpreter/context.h
        src/interpreter/context.cpp
        inc/analysis/tree_analysis.h
        src/analysis/tree_analysis.cpp
        src/analysis/visitors/identifier_resolution_visitor.cpp
        inc/analysis/contexts/identifier_resolution_context.h
        inc/analysis/visitors/generic_visitor.h
        inc/analysis/visitors/identifier_resolution_visitor.h
        src/analysis/visitors/identifier_finder_visitor.cpp
        inc/analysis/visitors/identifier_finder_visitor.h
        inc/analysis/contexts/identifier_finder_context.h
        inc/ast/statement/fwd/class_declaration.h
        inc/ast/statement/class_declaration.h
        inc/interpreter/interpreter_error.h
        inc/interpreter/class_instance.h
        inc/interpreter/class_blueprint.h
        inc/interpreter/fwd/class_blueprint.h
        inc/interpreter/fwd/lox_value.h
        inc/interpreter/fwd/class_instance.h
        inc/interpreter/fwd/lox_function.h
        inc/interpreter/fwd/interpreter_error.h
        inc/ast/expression/dot_operator.h
        inc/ast/expression/fwd/dot_operator.h
        src/parser/parse_functions/access_parse.cpp
        inc/parser/parse_functions/access_parse.h
        src/interpreter/operations/access.cpp
)